# fms-guardrails-orchestrator

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.amd64  Dockerfile.ppc64le  Dockerfile.s390x  Dockerfile.x86  README.md  TODOs.md  build.rs  index.html  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  test.yml
.swagger_ui/: swagger-initializer.js
api_files/: tokenization.yaml
config/: config.yaml  configmap.yaml  test.config.yaml
docs/: open-telemetry.md
docs/api/: openai_chat_completions.yaml  openapi_detector_api.yaml  orchestrator_openapi_0_1_0.yaml
docs/architecture/adrs/: 001-orchestrator.md  002-streaming-response-aggregation.md  003-detector-api-design.md  003-detectors.md  004-orchestrator-input-only-api-design.md  005-chat-completion-support.md  005-detector-type.md  006-detector-type.md  007-orchestrator-telemetry.md  008-streaming-orchestrator-endpoints.md  009-detector-rules.md  010-detection-batcher.md  010-detector-fields.md  011-detector-fields.md  README.md
examples/: python_orchestrator.py
examples/langchain/: content_detect_middleware.py  run.py
protos/: caikit_data_model_caikit_nlp.proto  caikit_data_model_nlp.proto  caikit_runtime_Chunkers.proto  caikit_runtime_Nlp.proto  generation.proto  health_check.proto
scripts/: collect_env.sh  installRemediationTools.sh  remediation-script.sh  removeRemediationTools.sh
src/: args.rs  clients.rs  config.rs  health.rs  lib.rs  main.rs  models.rs  orchestrator.rs  parse.rs  server.rs  tracing_utils.rs  utils.rs
src/apis/: configuration.rs
src/clients/: chunker.rs  detector.rs  detector_models.rs  errors.rs  eventsource.rs  generation.rs  grpc.rs  http.rs  lib.rs  nlp.rs  openai.rs  otel.rs  otel_grpc.rs  rest_detectors.rs  tgis.rs
src/clients/detector/: text_chat.rs  text_contents.rs  text_context_chat.rs  text_context_doc.rs  text_generation.rs
src/clients/generation/: nlp.rs  tgis.rs
src/models/: location_inner.rs  mod.rs  token.rs  tokenization_results.rs  tokenization_task_http_request_1.rs
src/orchestrator/: chat_completions.rs  chat_completions_detection.rs  common.rs  detector_processing.rs  errors.rs  handlers.rs  python_interface.rs  streaming.rs  streaming_content_detection.rs  types.rs  unary.rs
src/orchestrator/aggregators/: max_processed_index.rs  mod.rs
src/orchestrator/common/: client.rs  ext.rs  tasks.rs  utils.rs
src/orchestrator/detector_processing/: content.rs
src/orchestrator/handlers/: chat_completions_detection.rs  chat_detection.rs  classification_with_gen.rs  completions_detection.rs  context_docs_detection.rs  detection_on_generation.rs  generation_with_detection.rs  streaming_classification_with_gen.rs  streaming_content_detection.rs  text_content_detection.rs
src/orchestrator/handlers/chat_completions_detection/: streaming.rs  unary.rs
src/orchestrator/handlers/completions_detection/: streaming.rs  unary.rs
src/orchestrator/processors/: max_processed_index.rs  mod.rs
src/orchestrator/python_interface/: models.rs  orchestrator.rs
src/orchestrator/streaming/: aggregator.rs
src/orchestrator/streaming_content_detection/: aggregator.rs
src/orchestrator/types/: batch_detection_stream.rs  chat_message.rs  chunk.rs  completion_state.rs  detection.rs  detection_batch_stream.rs  detection_batcher.rs
src/orchestrator/types/detection_batcher/: chat_completion.rs  completion.rs  max_processed_index.rs  noop.rs
src/rpc/: nlp.rs
src/server/: errors.rs  routes.rs  tls.rs  utils.rs
src/tracing_utils/: trace_layer.rs
src/utils/: json.rs  tls.rs  trace.rs
tests/: canary_test.rs  chat_completions_detection.rs  chat_completions_streaming.rs  chat_completions_unary.rs  chat_detection.rs  chunker.rs  classification_with_text_gen.rs  completions_detection.rs  completions_streaming.rs  completions_unary.rs  context_docs_detection.rs  detection_content.rs  detection_on_generation.rs  generation_nlp.rs  generation_with_detection.rs  generation_with_detection_nlp.rs  router_integration_test.rs  streaming.rs  streaming_classification_with_gen.rs  streaming_classification_with_gen_nlp.rs  streaming_content_detection.rs  test.config.yaml  test_config.yaml  text_content_detection.rs  unary_classification_with_text_gen.rs
tests/common/: chat_completions.rs  chunker.rs  detectors.rs  errors.rs  generation.rs  mod.rs  openai.rs  orchestrator.rs  util.rs
tests/resources/: localhost.crt  localhost.key
tokenization-client/: Cargo.toml
tokenization-client/src/: main.rs
tokenization-client/src/apis/: configuration.rs  default_api.rs
tokenization-client/src/models/: http_validation_error.rs  location_inner.rs  token.rs  tokenization_results.rs  tokenization_task_http_request_1.rs  validation_error.rs
