[package]
name = "fms-guardrails-orchestr8"
version = "0.10.0"
edition = "2024"
authors = ["Evaline Ju", "Gaurav Kumbhat", "Dan Clark"]
description = "Foundation models orchestration server"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fms-guardrails-orchestr8"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["json"] }
axum-extra = { version = "0.10.1", features = ["json-lines"] }
bytes = "1.10.1"
clap = { version = "4.5.39", features = ["derive", "env"] }
eventsource-stream = "0.2.3"
futures = "0.3.31"
futures-util = { version = "0.3", default-features = false, features = [] }
ginepro = "0.8.2"
http = "1.3.1"
http-body = "1.0"
http-body-util = "0.1.3"
http-serde = "2.1.1"
hyper = { version = "1.6.0", features = ["http1", "http2", "server"] }
hyper-rustls = { version = "0.27.6", features = ["ring"] }
hyper-timeout = "0.5.2"
hyper-util = { version = "0.1.13", features = [
    "server-auto",
    "server-graceful",
    "tokio",
] }
opentelemetry = { version = "0.27.1", features = ["metrics", "trace"] }
opentelemetry-http = { version = "0.27.0", features = ["reqwest"] }
opentelemetry-otlp = { version = "0.27.0", features = [
    "grpc-tonic",
    "http-proto",
] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio", "metrics"] }
pin-project-lite = "0.2.16"
prost = "0.13.5"
reqwest = { version = "0.12.18", features = [
    "blocking",
    "rustls-tls",
    "json",
    "stream",
] }
rustls = { version = "0.23.27", default-features = false, features = [
    "ring",
    "std",
] }
rustls-pemfile = "2.2.0"
rustls-webpki = "0.102.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_yml = "0.0.12"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = [
    "rt",
    "rt-multi-thread",
    "parking_lot",
    "signal",
    "sync",
    "fs",
] }
tokio-rustls = { version = "0.26.2", features = ["ring"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = { version = "0.12.3", features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
axum-test = "17.3.0"
mocktail = { git = "https://github.com/IBM/mocktail" }
rand = "0.9.1"
test-log = "0.2.17"

[profile.release]
debug = false
incremental = true
lto = true
strip = "symbols"
