[package]
name = "fms-guardrails-orchestr8"
version = "0.13.0"
edition = "2024"
authors = ["Evaline Ju", "Gaurav Kumbhat", "Dan Clark"]
description = "Foundation models orchestration server"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fms-guardrails-orchestr8"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["json"] }
axum-extra = { version = "0.10.1", features = ["json-lines"] }
bytes = "1.10.1"
clap = { version = "4.5.41", features = ["derive", "env"] }
dashmap = "6.1.0"
eventsource-stream = "0.2.3"
futures = "0.3.31"
futures-util = { version = "0.3", default-features = false, features = [] }
ginepro = { git = "https://github.com/gkumbhat/ginepro", rev = "863ca186f37abf5997126aa97e85b56ca288a76c" }
http = "1.3.1"
http-body = "1.0"
http-body-util = "0.1.3"
http-serde = "2.1.1"
hyper = { version = "1.6.0", features = ["http1", "http2", "server"] }
hyper-rustls = { version = "0.27.7", features = ["ring"] }
hyper-timeout = "0.5.2"
hyper-util = { version = "0.1.16", features = [
    "server-auto",
    "server-graceful",
    "tokio",
] }
opentelemetry = { version = "0.30.0", features = ["metrics", "trace"] }
opentelemetry-http = { version = "0.30.0", features = ["reqwest"] }
opentelemetry-otlp = { version = "0.30.0", features = [
    "grpc-tonic",
    "http-proto",
] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "metrics"] }
pin-project-lite = "0.2.16"
prost = "0.13.5"
reqwest = { version = "0.12.22", features = [
    "blocking",
    "rustls-tls",
    "json",
    "stream",
] }
rustls = { version = "0.23.29", default-features = false, features = [
    "ring",
    "std",
] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
rustls-webpki = "0.103.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141", features = ["preserve_order"] }
serde_yml = "0.0.12"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = [
    "rt",
    "rt-multi-thread",
    "parking_lot",
    "signal",
    "sync",
    "fs",
] }
tokio-rustls = { version = "0.26.2", features = ["ring"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = { version = "0.13.1", features = [
    "tls-ring",
    "tls-native-roots",
    "tls-webpki-roots",
] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.13.1"

[dev-dependencies]
axum-test = "17.3.0"
mocktail = "0.3.0"
rand = "0.9.2"
test-log = "0.2.18"

[profile.release]
debug = false
incremental = true
lto = true
strip = "symbols"
