[package]
name = "fms-guardrails-orchestr8"
version = "0.16.0"
edition = "2024"
authors = ["Evaline Ju", "Gaurav Kumbhat", "Dan Clark"]
description = "Foundation models orchestration server"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fms-guardrails-orchestr8"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["json"] }
axum-extra = { version = "0.10.1", features = ["json-lines"] }
bytes = "1.10.1"
clap = { version = "4.5.47", features = ["derive", "env"] }
dashmap = "6.1.0"
eventsource-stream = "0.2.3"
futures = "0.3.31"
futures-util = { version = "0.3", default-features = false, features = [] }
ginepro = { git = "https://github.com/gkumbhat/ginepro", rev = "49e56eada1cfda8af206383e014fb0ce4641da25" }
http = "1.3.1"
http-body = "1.0"
http-body-util = "0.1.3"
http-serde = "2.1.1"
hyper = { version = "1.7.0", features = ["http1", "http2", "server"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = [
    "ring",
    "logging",
    "http1",
    "http2",
    "tls12",
    "native-tokio",
] }
hyper-timeout = "0.5.2"
hyper-util = { version = "0.1.16", features = [
    "server-auto",
    "server-graceful",
    "tokio",
] }
opentelemetry = { version = "0.30.0", features = ["metrics", "trace"] }
opentelemetry-http = { version = "0.30.0", features = ["reqwest"] }
opentelemetry-otlp = { version = "0.30.0", features = [
    "grpc-tonic",
    "http-proto",
] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "metrics"] }
pin-project-lite = "0.2.16"
prost = "0.14.1"
reqwest = { version = "0.12.23", features = [
    "blocking",
    "rustls-tls",
    "json",
    "stream",
] }
rustls = { version = "0.23.31", default-features = false, features = [
    "ring",
    "std",
] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
rustls-webpki = { version = "0.103.4", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
serde_yml = "0.0.12"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = [
    "rt",
    "rt-multi-thread",
    "parking_lot",
    "signal",
    "sync",
    "fs",
] }
tokio-rustls = { version = "0.26.2", default-features = false, features = [
    "ring",
] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = { version = "0.14.2", features = [
    "tls-ring",
    "tls-native-roots",
    "tls-webpki-roots",
] }
tonic-prost = "0.14.2"
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[dev-dependencies]
mocktail = { git = "https://github.com/IBM/mocktail", rev = "860e75e171a8eb818083813dbeed4401d1a40b3b" }
rand = "0.9.2"
test-log = "0.2.18"

[profile.release]
debug = false
incremental = true
lto = true
strip = "symbols"
